[package]
name = "dloom-locker"
version = "2.0.0"
description = "A Solana locker program created with Anchor"
authors = ["Samuel Horjet <samuelhorjet001@gmail.com>"]
repository = "https://github.com/samuelhorjet/dloom-locker"
license = "MIT"
edition = "2021"

# FIX: Strings must be in quotes and separated by commas
exclude = [
    ".anchor",
    ".DS_Store",
    "target/*",
    "!target/idl/",
    "!target/types/",
    "**/*.rs.bk",
    "node_modules",
    "test-ledger",
    ".yarn",
    "*.txt"
]

[lib]
crate-type = ["cdylib", "lib"]
name = "dloom_locker"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }